--- a/IDGS904_tema1/IDGS904_tema1.csproj
+++ b/IDGS904_tema1/IDGS904_tema1.csproj
@@ -124,10 +124,13 @@
     <Compile Include="Controllers\EscuelaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NuevoController.cs" />
+    <Compile Include="Controllers\TienditaController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Alumnos.cs" />
     <Compile Include="Models\Distancia2Num.cs" />
+    <Compile Include="Models\Grados.cs" />
     <Compile Include="Models\OperasBas.cs" />
     <Compile Include="Models\Productos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -195,6 +198,12 @@
     <Content Include="Views\Escuela\Index2.cshtml" />
     <Content Include="Views\Distancia2Num\DistanciaView.cshtml" />
     <Content Include="Views\Distancia2Num\Resultado.cshtml" />
+    <Content Include="Views\Tiendita\Index.cshtml" />
+    <Content Include="Views\Tiendita\DisplayTemplates\Boolean.cshtml" />
+    <Content Include="Views\Tiendita\DisplayTemplates\DateTime.cshtml" />
+    <Content Include="Views\Tiendita\EditorTemplates\DateTime.cshtml" />
+    <Content Include="Views\Tiendita\Registrar.cshtml" />
+    <Content Include="Views\Tiendita\Grados.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
