--- a/IDGS904_tema1/IDGS904_tema1.csproj
+++ b/IDGS904_tema1/IDGS904_tema1.csproj
@@ -120,20 +120,31 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\ArchivoController.cs" />
     <Compile Include="Controllers\Distancia2NumController.cs" />
     <Compile Include="Controllers\EscuelaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NuevoController.cs" />
     <Compile Include="Controllers\TienditaController.cs" />
+    <Compile Include="Controllers\TraductorController.cs" />
+    <Compile Include="Controllers\TrianguloController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Alumnos.cs" />
+    <Compile Include="Models\Buscar.cs" />
     <Compile Include="Models\Distancia2Num.cs" />
     <Compile Include="Models\Grados.cs" />
+    <Compile Include="Models\Maestros.cs" />
     <Compile Include="Models\OperasBas.cs" />
     <Compile Include="Models\Productos.cs" />
+    <Compile Include="Models\Traductor.cs" />
+    <Compile Include="Models\Triangulo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\GuardarServices.cs" />
+    <Compile Include="Services\GuardarTraductor.cs" />
+    <Compile Include="Services\LeerServices.cs" />
+    <Compile Include="Services\LeerTraductor.cs" />
     <Compile Include="Services\ProductoServices.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -204,6 +215,11 @@
     <Content Include="Views\Tiendita\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\Tiendita\Registrar.cshtml" />
     <Content Include="Views\Tiendita\Grados.cshtml" />
+    <Content Include="Views\Archivo\Registrar.cshtml" />
+    <Content Include="Views\Archivo\LeerDatos.cshtml" />
+    <Content Include="Views\Traductor\Traductor.cshtml" />
+    <Content Include="Views\Traductor\TraducirPalabras.cshtml" />
+    <Content Include="Views\Triangulo\PuntosTriangulo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
